<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cappybara</string>

    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_video">VideoView</string>
    <string name="button_media">MediaPlayer</string>
    <string name="button_exo">ExoPlayer</string>
    <string name="media_url">https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="button_import_page">Start</string>
    <string name="button_upload">Upload a video</string>
    <string name="button_capture">Record a video</string>
    <string name="uri_placeholder">File URI</string>
    <string name="files_placeholder">[filesDir]</string>
    <string name="button_export">Finish</string>
    <string name="element_text">Element text</string>
    <string name="button_save_video">Save video</string>
    <string name="button_save_sub">Save subtitles</string>
    <string name="button_add_cap">Add caption</string>
    <string name="button_preview">Preview</string>
    <string name="button_back">Back</string>
    <string name="button_finish">Finish</string>
    <string name="button_gen_caps">Generate captions</string>
    <string name="button_go">Go</string>

</resources>
